Harden Maps parser for Android 10+